--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
 <title>All About Matcha ☆</title>
 	<link rel="stylesheet" href="main.css">
 </head>
+	
+	<!--source code for google font-->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&display=swap" rel="stylesheet">
+	
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
 
 <body>
 	
@@ -12,6 +21,7 @@
 		
 		<header>
 			<h1>☆ All About Matcha ☆</h1>
+			
 			<p class="subtitle">A beginner-friendly guide to matcha</p>
 			
 		<!--navigation bar-->
@@ -49,7 +59,10 @@
 		
 		<!--benefits-->
 		<section class="benefits">
-		<img class="img-left" src="images/hot-matchalatte.jpeg" alt="hot matcha latte in a mug">
+		<img class="img-left" src="images/matcha_tools.jpg" alt="matcha tools" usemap="#benefits">
+			<map name="benefits">
+			<area shape="rect" coords="167,216,361,362" href="getting-started.html">
+			</map>
 			<div class="text">
 				<h2>Benefits of Matcha</h2>
 				<p>
